kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airms
  labels:
    name: airms
    environment: production
